Revision history for Perl extension Util::H2O.

0.14	not yet released
	- ...

0.12	Mon, Jul 19 2021
	- added the "-ro" option for immutable objects/hashes
	- WARNING: Potentially Incompatible Changes:
		- the constructor generated by the "-new" option now locks
		  the new object's keyset (unless "-lock" is disabled)
		- the "-recurse" option now passes down the value of the
		  "-lock" option to nested hashes in addition to the new "-ro"
	- documented AUTOLOAD and added tests
	- module now issues a warning that hashes can't be locked on old Perls

0.10	Mon, Jun  1 2020	commit 6db2a1d4cdf1a82ad2efe00f402a9596fa14cbfa
	- added "-classify" option
	- added "-nolock" option

0.08	Sat, May 23 2020	commit da41ca7d38dc99254a9aeabe0aaab1b4a94585ac
	- WARNING: Potentially Incompatible Changes:
		- methods created with "-meth" are removed from the hash by default
	- minor doc updates

0.06	Sun, May 17 2020	commit 8ef1cd7fe1c003b02f121927bb1ff297a8e69aad
	- WARNING: Potentially Incompatible Changes:
		- added "-lock" option and made it the default (locks hash's keyset)

0.04	Sun, May 17 2020	commit d47e94d0c0f36b88e948adf9215f7d92c836d60c
	- added "-clean" and "-new" options

0.02	Sat, May 16 2020	commit bf7a809de7079ef72ec14170e091a356d3d432ca
	- added "-class" option
	- improved docs
	- fix "redefined" warnings on duplicate @additional_keys

0.01	Sat, May 16 2020	commit 7eb1833b10a40eb4f1f6fa5a60a8be7c69a293d1
	- first public release